Debug: Invalid Pointers, FSM logical errors (#70)

--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -21,7 +21,7 @@ CORTEX_M7.default_mode_Activation=1
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,Queues01,configMAX_TASK_NAME_LEN,configENABLE_FPU,configTOTAL_HEAP_SIZE
 FREERTOS.Queues01=sessionControllerToLumexLcd,25,session_controller_to_lumex_lcd,0,Dynamic,NULL,NULL; lumexLcdTimerInterrupt,1,HAL_StatusTypeDef,0,Dynamic,NULL,NULL; sessionControllerToBpm,10,session_controller_to_bpm,0,Dynamic,NULL,NULL; sessionControllerToForceSensor,16,bool,0,Dynamic,NULL,NULL; sessionControllerToPidController,5,session_controller_to_pid_controller,0,Dynamic,NULL,NULL; opticalEncoderToPidController,10,optical_encoder_output_data,0,Dynamic,NULL,NULL; pidControllerToBpm,10,float,0,Dynamic,NULL,NULL; sessionControllerToOpticalSensor,16,uint16_t,0,Dynamic,NULL,NULL;sessionControllertoUsbController,16,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=usbTask,40,1024,usbTaskEntryFunction,As weak,NULL,Dynamic,NULL,NULL; bpmTask,40,128,bpmTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL; forceSensorTask,32,256,forceSensorTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL; pidTask,40,256,pidControllerTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL; opticalSensorTask,32,256,opticalSensorTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL;sessionControllerTask,40,256,sessionControllerTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL;lcdDisplayTask,16,256,lcdDisplayTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL;ledBlinkTask,8,128,ledBlinkTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=usbTask,40,1024,usbTaskEntryFunction,As weak,NULL,Dynamic,NULL,NULL; bpmTask,40,128,bpmTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL; forceSensorTask,32,128,forceSensorTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL; pidTask,40,128,pidControllerTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL; opticalSensorTask,32,128,opticalSensorTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL;sessionControllerTask,40,128,sessionControllerTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL;lcdDisplayTask,16,128,lcdDisplayTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL;ledBlinkTask,8,128,ledBlinkTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configMAX_TASK_NAME_LEN=32
 FREERTOS.configTOTAL_HEAP_SIZE=46080
@@ -280,12 +280,13 @@ PE4.Locked=true
 PE4.Signal=GPXTI4
 PE5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE5.GPIO_Label=BTN_SELECT
-PE5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PE5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PE5.GPIO_PuPd=GPIO_PULLUP
 PE5.Locked=true
 PE5.Signal=GPXTI5
-PE6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE6.GPIO_Label=BTN_BACK
+PE6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PE6.GPIO_PuPd=GPIO_PULLUP
 PE6.Locked=true
 PE6.Signal=GPXTI6
@@ -343,7 +344,7 @@ PH6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PH6.Locked=true
 PH6.Signal=GPIO_Output
 PH7.GPIOParameters=GPIO_Label
-PH7.GPIO_Label=LED
+PH7.GPIO_Label=ILI_SPI2_SD_CS
 PH7.Locked=true
 PH7.Signal=GPIO_Output
 PI11.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
@@ -352,25 +353,28 @@ PI11.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PI11.GPIO_PuPd=GPIO_NOPULL
 PI11.Locked=true
 PI11.Signal=GPXTI11
-PI4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PI4.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PI4.GPIO_Label=LED_BACK
 PI4.GPIO_PuPd=GPIO_NOPULL
 PI4.Locked=true
+PI4.PinState=GPIO_PIN_SET
 PI4.Signal=GPIO_Output
-PI5.GPIOParameters=GPIO_PuPd,GPIO_Label
+PI5.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PI5.GPIO_Label=LED_SELECT
 PI5.GPIO_PuPd=GPIO_NOPULL
 PI5.Locked=true
+PI5.PinState=GPIO_PIN_SET
 PI5.Signal=GPIO_Output
-PI6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PI6.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PI6.GPIO_Label=LED_BRAKE
 PI6.GPIO_PuPd=GPIO_NOPULL
 PI6.Locked=true
+PI6.PinState=GPIO_PIN_SET
 PI6.Signal=GPIO_Output
 PI7.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PI7.GPIO_Label=BTN_BRAKE
 PI7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
-PI7.GPIO_PuPd=GPIO_PULLUP
+PI7.GPIO_PuPd=GPIO_PULLDOWN
 PI7.Locked=true
 PI7.Signal=GPXTI7
 PI8.GPIOParameters=GPIO_Label
