working, need to remove commented out code

--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -29,9 +29,10 @@ FREERTOS.configTOTAL_HEAP_SIZE=46080
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C4.I2C_Speed_Mode=I2C_Fast
-I2C4.IPParameters=Timing,I2C_Speed_Mode
-I2C4.Timing=0x00401959
+I2C4.I2C_Speed_Mode=I2C_Standard
+I2C4.IPParameters=Timing,I2C_Speed_Mode,Speed
+I2C4.Speed=100
+I2C4.Timing=0x00C0EAFF
 KeepUserPlacement=false
 MMTAppRegionsCount=0
 MMTConfigApplied=false
@@ -351,7 +352,7 @@ PH7.Signal=GPIO_Output
 PI11.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PI11.GPIO_Label=ADS1115_ALERT
 PI11.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PI11.GPIO_PuPd=GPIO_NOPULL
+PI11.GPIO_PuPd=GPIO_PULLUP
 PI11.Locked=true
 PI11.Signal=GPXTI11
 PI4.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
