--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -1,13 +1,15 @@
 #MicroXplorer Configuration settings - do not modify
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV2
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
 ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
 ADC2.Rank-0\#ChannelRegularConversion=1
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC3.ClockPrescaler=ADC_CLOCK_ASYNC_DIV2
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
 ADC3.NbrOfConversionFlag=1
 ADC3.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC3.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
@@ -46,11 +48,10 @@ Mcu.IP11=SYS
 Mcu.IP12=TIM1
 Mcu.IP13=TIM2
 Mcu.IP14=TIM13
-Mcu.IP15=TIM14
-Mcu.IP16=TIM16
-Mcu.IP17=USART1
-Mcu.IP18=USB_DEVICE
-Mcu.IP19=USB_OTG_FS
+Mcu.IP15=TIM16
+Mcu.IP16=USART1
+Mcu.IP17=USB_DEVICE
+Mcu.IP18=USB_OTG_FS
 Mcu.IP2=CORTEX_M7
 Mcu.IP3=FREERTOS
 Mcu.IP4=I2C4
@@ -59,7 +60,7 @@ Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=SDMMC1
 Mcu.IP9=SPI1
-Mcu.IPNb=20
+Mcu.IPNb=19
 Mcu.Name=STM32H743IITx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE3
@@ -117,15 +118,14 @@ Mcu.Pin55=VP_SYS_VS_tim17
 Mcu.Pin56=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin57=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin58=VP_TIM13_VS_ClockSourceINT
-Mcu.Pin59=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin59=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin6=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin60=VP_TIM16_VS_ClockSourceINT
-Mcu.Pin61=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin62=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin60=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin61=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin7=PI11
 Mcu.Pin8=PF6
 Mcu.Pin9=PF7
-Mcu.PinsNb=63
+Mcu.PinsNb=62
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743IITx
@@ -151,7 +151,6 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM17_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM8_UP_TIM13_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM17_IRQn
 NVIC.TimeBaseIP=TIM17
@@ -295,7 +294,7 @@ PE6.Locked=true
 PE6.Signal=GPXTI6
 PF6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PF6.GPIO_Label=BPM_CTRL_MCU
-PF6.GPIO_PuPd=GPIO_PULLUP
+PF6.GPIO_PuPd=GPIO_PULLDOWN
 PF6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PF6.Signal=S_TIM16_CH1
 PF7.GPIOParameters=GPIO_Label
@@ -303,11 +302,10 @@ PF7.GPIO_Label=ADC3_BPM_FB
 PF7.Locked=true
 PF7.Mode=IN3-Single-Ended
 PF7.Signal=ADC3_INP3
-PF9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PF9.GPIOParameters=GPIO_Label
 PF9.GPIO_Label=OP_IN
-PF9.GPIO_PuPd=GPIO_PULLUP
-PF9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
-PF9.Signal=S_TIM14_CH1
+PF9.Locked=true
+PF9.Signal=GPXTI9
 PG10.GPIOParameters=GPIO_Speed,GPIO_Label
 PG10.GPIO_Label=ILI_SPI1_LCD_CS
 PG10.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
@@ -416,7 +414,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM14_Init-TIM14-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_TIM13_Init-TIM13-false-HAL-true,11-MX_ADC2_Init-ADC2-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_ADC3_Init-ADC3-false-HAL-true,14-MX_I2C4_Init-I2C4-false-HAL-true,15-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true,9-MX_TIM13_Init-TIM13-false-HAL-true,10-MX_ADC2_Init-ADC2-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_ADC3_Init-ADC3-false-HAL-true,13-MX_I2C4_Init-I2C4-false-HAL-true,14-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_PLL3
 RCC.ADCFreq_Value=50000000
 RCC.AHB12Freq_Value=200000000
@@ -428,52 +426,53 @@ RCC.APB4Freq_Value=100000000
 RCC.AXIClockFreq_Value=200000000
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=64000000
-RCC.CortexFreq_Value=200000000
-RCC.CpuClockFreq_Value=200000000
-RCC.D1CPREFreq_Value=200000000
+RCC.CortexFreq_Value=400000000
+RCC.CpuClockFreq_Value=400000000
+RCC.D1CPREFreq_Value=400000000
 RCC.D1PPRE=RCC_APB3_DIV2
 RCC.D2PPRE1=RCC_APB1_DIV2
 RCC.D2PPRE2=RCC_APB2_DIV2
 RCC.D3PPRE=RCC_APB4_DIV2
-RCC.DFSDMACLkFreq_Value=100000000
+RCC.DFSDMACLkFreq_Value=200000000
 RCC.DFSDMFreq_Value=100000000
 RCC.DIVM1=2
 RCC.DIVM2=2
 RCC.DIVM3=2
-RCC.DIVN1=32
+RCC.DIVN1=64
 RCC.DIVN2=32
 RCC.DIVN3=32
-RCC.DIVP1Freq_Value=200000000
+RCC.DIVP1Freq_Value=400000000
 RCC.DIVP2Freq_Value=200000000
 RCC.DIVP3Freq_Value=200000000
 RCC.DIVQ1=4
-RCC.DIVQ1Freq_Value=100000000
+RCC.DIVQ1Freq_Value=200000000
 RCC.DIVQ2=8
 RCC.DIVQ2Freq_Value=50000000
 RCC.DIVQ3=8
 RCC.DIVQ3Freq_Value=50000000
-RCC.DIVR1Freq_Value=200000000
+RCC.DIVR1Freq_Value=400000000
 RCC.DIVR2Freq_Value=200000000
 RCC.DIVR3=8
 RCC.DIVR3Freq_Value=50000000
-RCC.FDCANFreq_Value=100000000
+RCC.FDCANFreq_Value=200000000
 RCC.FMCFreq_Value=200000000
 RCC.FamilyName=M
 RCC.HCLK3ClockFreq_Value=200000000
 RCC.HCLKFreq_Value=200000000
+RCC.HPRE=RCC_HCLK_DIV2
 RCC.HRTIMFreq_Value=200000000
 RCC.I2C123CLockSelection=RCC_I2C123CLKSOURCE_PLL3
 RCC.I2C123Freq_Value=50000000
 RCC.I2C4CLockSelection=RCC_I2C4CLKSOURCE_PLL3
 RCC.I2C4Freq_Value=50000000
-RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,I2C123CLockSelection,I2C123Freq_Value,I2C4CLockSelection,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16CLockSelection,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,I2C123CLockSelection,I2C123Freq_Value,I2C4CLockSelection,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16CLockSelection,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=100000000
 RCC.LPTIM2Freq_Value=100000000
 RCC.LPTIM345Freq_Value=100000000
 RCC.LPUART1Freq_Value=100000000
 RCC.LTDCFreq_Value=50000000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=200000000
+RCC.MCO2PinFreq_Value=400000000
 RCC.PLL2FRACN=0
 RCC.PLL3FRACN=0
 RCC.PLLFRACN=0
@@ -481,17 +480,17 @@ RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.QSPIFreq_Value=200000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=100000000
-RCC.SAI23Freq_Value=100000000
-RCC.SAI4AFreq_Value=100000000
-RCC.SAI4BFreq_Value=100000000
-RCC.SDMMCFreq_Value=100000000
-RCC.SPDIFRXFreq_Value=100000000
-RCC.SPI123Freq_Value=100000000
+RCC.SAI1Freq_Value=200000000
+RCC.SAI23Freq_Value=200000000
+RCC.SAI4AFreq_Value=200000000
+RCC.SAI4BFreq_Value=200000000
+RCC.SDMMCFreq_Value=200000000
+RCC.SPDIFRXFreq_Value=200000000
+RCC.SPI123Freq_Value=200000000
 RCC.SPI45Freq_Value=100000000
 RCC.SPI6Freq_Value=100000000
 RCC.SWPMI1Freq_Value=100000000
-RCC.SYSCLKFreq_VALUE=200000000
+RCC.SYSCLKFreq_VALUE=400000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.Tim1OutputFreq_Value=200000000
 RCC.Tim2OutputFreq_Value=200000000
@@ -501,7 +500,7 @@ RCC.USART16Freq_Value=50000000
 RCC.USART234578Freq_Value=100000000
 RCC.USBCLockSelection=RCC_USBCLKSOURCE_PLL3
 RCC.USBFreq_Value=50000000
-RCC.VCO1OutputFreq_Value=400000000
+RCC.VCO1OutputFreq_Value=800000000
 RCC.VCO2OutputFreq_Value=400000000
 RCC.VCO3OutputFreq_Value=400000000
 RCC.VCOInput1Freq_Value=12500000
@@ -523,37 +522,33 @@ SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
-SH.S_TIM14_CH1.0=TIM14_CH1,Input_Capture1_from_TI1
-SH.S_TIM14_CH1.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 SH.S_TIM16_CH1.0=TIM16_CH1,PWM Generation1 CH1
 SH.S_TIM16_CH1.ConfNb=1
-SPI1.CalculateBaudRate=50.0 MBits/s
+SPI1.CalculateBaudRate=100.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.CalculateBaudRate=50.0 MBits/s
+SPI2.CalculateBaudRate=100.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 TIM13.IPParameters=Prescaler,Period
 TIM13.Period=40-1
-TIM13.Prescaler=200-1
-TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM14.Channel=TIM_CHANNEL_1
-TIM14.IPParameters=Channel,Prescaler,AutoReloadPreload
-TIM14.Prescaler=200-1
+TIM13.Prescaler=400-1
 TIM16.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM16.Channel=TIM_CHANNEL_1
 TIM16.IPParameters=Channel,Prescaler,Period,AutoReloadPreload,Pulse,OCPolarity_1
 TIM16.OCPolarity_1=TIM_OCPOLARITY_HIGH
 TIM16.Period=200-1
-TIM16.Prescaler=100-1
+TIM16.Prescaler=200-1
 TIM16.Pulse=0
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Prescaler,AutoReloadPreload
-TIM2.Prescaler=200-1
+TIM2.Prescaler=400-1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
@@ -570,8 +565,6 @@ VP_SYS_VS_tim17.Mode=TIM17
 VP_SYS_VS_tim17.Signal=SYS_VS_tim17
 VP_TIM13_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM13_VS_ClockSourceINT.Signal=TIM13_VS_ClockSourceINT
-VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
